# Assignment1_Exp

./: README.md
src/aruco_ros/src/: marker_publish.cpp
src/rosbot_bringup/: setup.py
src/rosbot_bringup/launch/: exp1.launch  real.launch  rosbot_gazebo.launch  vero.launch
src/rosbot_bringup/scripts/: camera.py  realworld.py  simulation.py
src/rosbot_descr_real/: CMakeLists.txt  package.xml
src/rosbot_description/config/: joint_state_controller.yaml
src/rosbot_description/urdf/: rosbot.xacro
